feat(core): checkpoint regional playable runtime
Checkpoint the accumulated ECS, regional ownership, gameplay, client MCP, and mc-net modularization work after full workspace validation. Preserve authoritative transaction fences and behavioral client-gate tests while removing synthetic source-string checks.