@@ -8,36 +8,59 @@ import java.io.IOException;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 
 public final class AgentHttpBridge implements AutoCloseable {
+    private static final Duration DEFAULT_SHUTDOWN_TIMEOUT = Duration.ofSeconds(5);
     private final HttpServer server;
     private final ExecutorService executor;
+    private final Duration shutdownTimeout;
 
-    private AgentHttpBridge(HttpServer server, ExecutorService executor) {
+    private AgentHttpBridge(
+        HttpServer server,
+        ExecutorService executor,
+        Duration shutdownTimeout
+    ) {
         this.server = server;
         this.executor = executor;
+        this.shutdownTimeout = shutdownTimeout;
     }
 
     public static AgentHttpBridge start(String secret, int port, CommandRegistry registry) throws IOException {
+        return start(secret, port, registry, DEFAULT_SHUTDOWN_TIMEOUT);
+    }
+
+    static AgentHttpBridge start(
+        String secret,
+        int port,
+        CommandRegistry registry,
+        Duration shutdownTimeout
+    ) throws IOException {
         if (secret == null || secret.isBlank()) {
             throw new IllegalArgumentException("shared secret must not be blank");
         }
-        HttpServer server = HttpServer.create(new InetSocketAddress(InetAddress.getLoopbackAddress(), port), 0);
-        ExecutorService executor = Executors.newSingleThreadExecutor(runnable -> {
-            Thread thread = new Thread(runnable, "solaris-client-agent-bridge");
-            thread.setDaemon(true);
-            return thread;
-        });
+        if (shutdownTimeout == null || shutdownTimeout.isZero() || shutdownTimeout.isNegative()) {
+            throw new IllegalArgumentException("shutdown timeout must be positive");
+        }
+        HttpServer server = HttpServer.create(new InetSocketAddress(InetAddress.getByName("127.0.0.1"), port), 0);
+        ExecutorService executor = Executors.newThreadPerTaskExecutor(
+            Thread.ofVirtual().name("solaris-client-agent-bridge-", 0).factory()
+        );
         server.setExecutor(executor);
         server.createContext("/rpc", exchange -> handle(exchange, secret, registry));
         server.start();
-        return new AgentHttpBridge(server, executor);
+        return new AgentHttpBridge(server, executor, shutdownTimeout);
     }
 
     public int port() {
         return server.getAddress().getPort();
+    }
+
+    public String hostAddress() {
+        return server.getAddress().getAddress().getHostAddress();
     }
 
     private static void handle(HttpExchange exchange, String secret, CommandRegistry registry) throws IOException {
@@ -91,5 +114,18 @@ public final class AgentHttpBridge implements AutoCloseable {
     public void close() {
         server.stop(0);
         executor.shutdownNow();
+        try {
+            if (!executor.awaitTermination(shutdownTimeout.toNanos(), TimeUnit.NANOSECONDS)) {
+                throw new IllegalStateException(
+                    "HTTP bridge executor did not terminate within " + shutdownTimeout
+                );
+            }
+        } catch (InterruptedException error) {
+            Thread.currentThread().interrupt();
+            throw new IllegalStateException(
+                "interrupted while waiting for HTTP bridge executor termination",
+                error
+            );
+        }
     }
 }
